# Pokedex-JSON-Parser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Pokedex/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  Pokedex.cpp  Pokedex.h
Source/: JsonParser.cpp  JsonParser.h  Pokedex.cpp
